<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/semn_explo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activityMargins"
        android:orientation="vertical">

        <Button
            android:id="@+id/adauga"
            style="@style/buttonFirstActivity"
            android:text="@string/adauga" />

        <Button
            android:id="@+id/cauta"
            style="@style/buttonFirstActivity"
            android:text="@string/cauta" />

        <Button
            android:id="@+id/modifica"
            style="@style/buttonFirstActivity"
            android:text="@string/modifica_sterge" />
    </LinearLayout>
</LinearLayout>