<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugConferintaActivity"
    style="@style/ActivityMarginPortrait">

    <TextView
        android:id="@+id/textViewNume"
        style="@style/textViewAdauga"
        android:text="@string/nume"/>

    <EditText
        android:id="@+id/editTextNume"
        style="@style/editTextAdauga"
        android:layout_toRightOf="@id/textViewNume"
        android:layout_toEndOf="@id/textViewNume"/>

    <TextView
        android:id="@+id/textViewDirector"
        style="@style/textViewAdauga"
        android:layout_below="@id/textViewNume"
        android:text="@string/director"/>

    <ListView
        android:id="@+id/listViewDirector"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/textViewDirector"/>

    <Button
        android:id="@+id/buttonAdauga"
        style="@style/buttonAdaugaActivity"
        android:layout_alignParentBottom="true"
        android:text="@string/adauga_modfica"/>

</RelativeLayout>